// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/AboutBuildModal should hide the build number if it is the same as the version number 1`] = `
<Modal
  animation={true}
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogClassName="about-modal"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h4"
    >
      <FormattedMessage
        defaultMessage="About Mattermost"
        id="about.title"
        values={Object {}}
      />
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <div
      className="about-modal__content"
    >
      <div
        className="about-modal__logo"
      >
        <MattermostLogo />
      </div>
      <div>
        <h3
          className="about-modal__title"
        >
          Mattermost
           
          <FormattedMessage
            defaultMessage="Team Edition"
            id="about.teamEditiont0"
            values={Object {}}
          />
        </h3>
        <p
          className="about-modal__subtitle padding-bottom"
        >
          <FormattedMessage
            defaultMessage="All your team communication in one place, instantly searchable and accessible anywhere."
            id="about.teamEditionSt"
            values={Object {}}
          />
        </p>
        <div
          className="form-group less"
        >
          <div>
            <FormattedMessage
              defaultMessage="Version:"
              id="about.version"
              values={Object {}}
            />
            <span
              id="versionString"
            >
               3.6.0
            </span>
          </div>
          <div>
            <FormattedMessage
              defaultMessage="Database:"
              id="about.database"
              values={Object {}}
            />
             Postgres
          </div>
        </div>
      </div>
    </div>
    <div
      className="about-modal__footer"
    >
      <div>
        <FormattedMessage
          defaultMessage="Join the Mattermost community at "
          id="about.teamEditionLearn"
          values={Object {}}
        />
        <a
          href="http://www.mattermost.org/"
          rel="noopener noreferrer"
          target="_blank"
        >
          mattermost.org
        </a>
      </div>
      <div
        className="form-group about-modal__copyright"
      >
        <FormattedMessage
          defaultMessage="Copyright 2015 - {currentYear} Mattermost, Inc. All rights reserved"
          id="about.copyright"
          values={
            Object {
              "currentYear": 2017,
            }
          }
        />
      </div>
    </div>
    <div
      className="about-modal__notice form-group padding-top x2"
    >
      <p>
        <FormattedHTMLMessage
          defaultMessage="Mattermost is made possible by the open source software used in our <a href=\\"https://about.mattermost.com/platform-notice-txt/\\" target=\\"_blank\\">platform</a>, <a href=\\"https://about.mattermost.com/desktop-notice-txt/\\" target=\\"_blank\\">desktop</a> and <a href=\\"https://about.mattermost.com/mobile-notice-txt/\\" target=\\"_blank\\">mobile</a> apps."
          id="about.notice"
          values={Object {}}
        />
      </p>
    </div>
    <div
      className="about-modal__hash"
    >
      <p>
        <FormattedMessage
          defaultMessage="Build Hash:"
          id="about.hash"
          values={Object {}}
        />
         
        abcdef1234567890
        <br />
        <FormattedMessage
          defaultMessage="EE Build Hash:"
          id="about.hashee"
          values={Object {}}
        />
         
      </p>
      <p>
        <FormattedMessage
          defaultMessage="Build Date:"
          id="about.date"
          values={Object {}}
        />
         
        21 January 2017
      </p>
    </div>
  </ModalBody>
</Modal>
`;

exports[`components/AboutBuildModal should match snapshot for enterprise edition 1`] = `
<Modal
  animation={true}
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogClassName="about-modal"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h4"
    >
      <FormattedMessage
        defaultMessage="About Mattermost"
        id="about.title"
        values={Object {}}
      />
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <div
      className="about-modal__content"
    >
      <div
        className="about-modal__logo"
      >
        <MattermostLogo />
      </div>
      <div>
        <h3
          className="about-modal__title"
        >
          Mattermost
           
          <FormattedMessage
            defaultMessage="Enterprise Edition"
            id="about.enterpriseEditione1"
            values={Object {}}
          />
        </h3>
        <p
          className="about-modal__subtitle padding-bottom"
        >
          <FormattedMessage
            defaultMessage="Modern communication from behind your firewall."
            id="about.enterpriseEditionSt"
            values={Object {}}
          />
        </p>
        <div
          className="form-group less"
        >
          <div>
            <FormattedMessage
              defaultMessage="Version:"
              id="about.version"
              values={Object {}}
            />
            <span
              id="versionString"
            >
               3.6.0  (3.6.2)
            </span>
          </div>
          <div>
            <FormattedMessage
              defaultMessage="Database:"
              id="about.database"
              values={Object {}}
            />
             Postgres
          </div>
        </div>
        <div
          className="form-group"
        >
          <FormattedMessage
            defaultMessage="Licensed to:"
            id="about.licensed"
            values={Object {}}
          />
           
          Mattermost Inc
        </div>
      </div>
    </div>
    <div
      className="about-modal__footer"
    >
      <div>
        <FormattedMessage
          defaultMessage="Learn more about Enterprise Edition at "
          id="about.enterpriseEditionLearn"
          values={Object {}}
        />
        <a
          href="http://about.mattermost.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          about.mattermost.com
        </a>
      </div>
      <div
        className="form-group about-modal__copyright"
      >
        <FormattedMessage
          defaultMessage="Copyright 2015 - {currentYear} Mattermost, Inc. All rights reserved"
          id="about.copyright"
          values={
            Object {
              "currentYear": 2017,
            }
          }
        />
      </div>
    </div>
    <div
      className="about-modal__notice form-group padding-top x2"
    >
      <p>
        <FormattedHTMLMessage
          defaultMessage="Mattermost is made possible by the open source software used in our <a href=\\"https://about.mattermost.com/platform-notice-txt/\\" target=\\"_blank\\">platform</a>, <a href=\\"https://about.mattermost.com/desktop-notice-txt/\\" target=\\"_blank\\">desktop</a> and <a href=\\"https://about.mattermost.com/mobile-notice-txt/\\" target=\\"_blank\\">mobile</a> apps."
          id="about.notice"
          values={Object {}}
        />
      </p>
    </div>
    <div
      className="about-modal__hash"
    >
      <p>
        <FormattedMessage
          defaultMessage="Build Hash:"
          id="about.hash"
          values={Object {}}
        />
         
        abcdef1234567890
        <br />
        <FormattedMessage
          defaultMessage="EE Build Hash:"
          id="about.hashee"
          values={Object {}}
        />
         
        0123456789abcdef
      </p>
      <p>
        <FormattedMessage
          defaultMessage="Build Date:"
          id="about.date"
          values={Object {}}
        />
         
        21 January 2017
      </p>
    </div>
  </ModalBody>
</Modal>
`;

exports[`components/AboutBuildModal should match snapshot for team edition 1`] = `
<Modal
  animation={true}
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogClassName="about-modal"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h4"
    >
      <FormattedMessage
        defaultMessage="About Mattermost"
        id="about.title"
        values={Object {}}
      />
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <div
      className="about-modal__content"
    >
      <div
        className="about-modal__logo"
      >
        <MattermostLogo />
      </div>
      <div>
        <h3
          className="about-modal__title"
        >
          Mattermost
           
          <FormattedMessage
            defaultMessage="Team Edition"
            id="about.teamEditiont0"
            values={Object {}}
          />
        </h3>
        <p
          className="about-modal__subtitle padding-bottom"
        >
          <FormattedMessage
            defaultMessage="All your team communication in one place, instantly searchable and accessible anywhere."
            id="about.teamEditionSt"
            values={Object {}}
          />
        </p>
        <div
          className="form-group less"
        >
          <div>
            <FormattedMessage
              defaultMessage="Version:"
              id="about.version"
              values={Object {}}
            />
            <span
              id="versionString"
            >
               3.6.0  (3.6.2)
            </span>
          </div>
          <div>
            <FormattedMessage
              defaultMessage="Database:"
              id="about.database"
              values={Object {}}
            />
             Postgres
          </div>
        </div>
      </div>
    </div>
    <div
      className="about-modal__footer"
    >
      <div>
        <FormattedMessage
          defaultMessage="Join the Mattermost community at "
          id="about.teamEditionLearn"
          values={Object {}}
        />
        <a
          href="http://www.mattermost.org/"
          rel="noopener noreferrer"
          target="_blank"
        >
          mattermost.org
        </a>
      </div>
      <div
        className="form-group about-modal__copyright"
      >
        <FormattedMessage
          defaultMessage="Copyright 2015 - {currentYear} Mattermost, Inc. All rights reserved"
          id="about.copyright"
          values={
            Object {
              "currentYear": 2017,
            }
          }
        />
      </div>
    </div>
    <div
      className="about-modal__notice form-group padding-top x2"
    >
      <p>
        <FormattedHTMLMessage
          defaultMessage="Mattermost is made possible by the open source software used in our <a href=\\"https://about.mattermost.com/platform-notice-txt/\\" target=\\"_blank\\">platform</a>, <a href=\\"https://about.mattermost.com/desktop-notice-txt/\\" target=\\"_blank\\">desktop</a> and <a href=\\"https://about.mattermost.com/mobile-notice-txt/\\" target=\\"_blank\\">mobile</a> apps."
          id="about.notice"
          values={Object {}}
        />
      </p>
    </div>
    <div
      className="about-modal__hash"
    >
      <p>
        <FormattedMessage
          defaultMessage="Build Hash:"
          id="about.hash"
          values={Object {}}
        />
         
        abcdef1234567890
        <br />
        <FormattedMessage
          defaultMessage="EE Build Hash:"
          id="about.hashee"
          values={Object {}}
        />
         
      </p>
      <p>
        <FormattedMessage
          defaultMessage="Build Date:"
          id="about.date"
          values={Object {}}
        />
         
        21 January 2017
      </p>
    </div>
  </ModalBody>
</Modal>
`;

exports[`components/AboutBuildModal should show the build number if it is the different from the version number 1`] = `
<Modal
  animation={true}
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogClassName="about-modal"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h4"
    >
      <FormattedMessage
        defaultMessage="About Mattermost"
        id="about.title"
        values={Object {}}
      />
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <div
      className="about-modal__content"
    >
      <div
        className="about-modal__logo"
      >
        <MattermostLogo />
      </div>
      <div>
        <h3
          className="about-modal__title"
        >
          Mattermost
           
          <FormattedMessage
            defaultMessage="Team Edition"
            id="about.teamEditiont0"
            values={Object {}}
          />
        </h3>
        <p
          className="about-modal__subtitle padding-bottom"
        >
          <FormattedMessage
            defaultMessage="All your team communication in one place, instantly searchable and accessible anywhere."
            id="about.teamEditionSt"
            values={Object {}}
          />
        </p>
        <div
          className="form-group less"
        >
          <div>
            <FormattedMessage
              defaultMessage="Version:"
              id="about.version"
              values={Object {}}
            />
            <span
              id="versionString"
            >
               3.6.0  (3.6.2)
            </span>
          </div>
          <div>
            <FormattedMessage
              defaultMessage="Database:"
              id="about.database"
              values={Object {}}
            />
             Postgres
          </div>
        </div>
      </div>
    </div>
    <div
      className="about-modal__footer"
    >
      <div>
        <FormattedMessage
          defaultMessage="Join the Mattermost community at "
          id="about.teamEditionLearn"
          values={Object {}}
        />
        <a
          href="http://www.mattermost.org/"
          rel="noopener noreferrer"
          target="_blank"
        >
          mattermost.org
        </a>
      </div>
      <div
        className="form-group about-modal__copyright"
      >
        <FormattedMessage
          defaultMessage="Copyright 2015 - {currentYear} Mattermost, Inc. All rights reserved"
          id="about.copyright"
          values={
            Object {
              "currentYear": 2017,
            }
          }
        />
      </div>
    </div>
    <div
      className="about-modal__notice form-group padding-top x2"
    >
      <p>
        <FormattedHTMLMessage
          defaultMessage="Mattermost is made possible by the open source software used in our <a href=\\"https://about.mattermost.com/platform-notice-txt/\\" target=\\"_blank\\">platform</a>, <a href=\\"https://about.mattermost.com/desktop-notice-txt/\\" target=\\"_blank\\">desktop</a> and <a href=\\"https://about.mattermost.com/mobile-notice-txt/\\" target=\\"_blank\\">mobile</a> apps."
          id="about.notice"
          values={Object {}}
        />
      </p>
    </div>
    <div
      className="about-modal__hash"
    >
      <p>
        <FormattedMessage
          defaultMessage="Build Hash:"
          id="about.hash"
          values={Object {}}
        />
         
        abcdef1234567890
        <br />
        <FormattedMessage
          defaultMessage="EE Build Hash:"
          id="about.hashee"
          values={Object {}}
        />
         
      </p>
      <p>
        <FormattedMessage
          defaultMessage="Build Date:"
          id="about.date"
          values={Object {}}
        />
         
        21 January 2017
      </p>
    </div>
  </ModalBody>
</Modal>
`;
